# udemy

./: CMakeLists.txt  helloworld.cpp  main.cpp  pointers.cpp
c++/c_and_c++_diff/: arrays.cpp
c++/data_types/: types.cpp
c++/pointer/: 1_pointer.cpp  2_pointer_arithmetic.cpp  3_pointer_casting.cpp  4_pointer_generic.cpp  7_pointer_strings.cpp
c++/pointer/arrays/: 1_pointer_arrays.cpp  2_pointer_arrays_decay.cpp  3_string_as_an_array.cpp  4_multidimensional_arrays.cpp
c++/pointer/functions/: function_callback_via_pointer.cpp  function_pointers.cpp
c++/pointer/memory/: c_style_management.cpp  dynamic_memory.cpp  namespace_exp.cpp
interview/: questions.txt
pointer/: 1_pointer.cpp  2_pointer_arithmetic.cpp  5_pointer_to_pointer.cpp  6_pointer_in_function_args.cpp  7_pointer_arrays.cpp
